[project]
name = "one_to_all_worker"
version = "0.1.0"
description = "Celery worker for One-to-All-app."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "celery>=5.4.0",
  "redis>=5.0.0",
  "pip>=24.0",
  "py_core",
]

[tool.uv.sources]
py_core = { path = "../../libs/pycore", editable = true }
dfloat11 = { path = "../../third_party/DFloat11", editable = true }

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

fp8_quant = [
  "numpy>=1.26.4,<3.0.0",
  "safetensors>=0.5.0",
  "torch",
  "torchvision",
  "tqdm>=4.66.0",
]

# Lossless BF16 compression / inference (requires CUDA).
df11 = [
  "dfloat11[cuda12]",
]

# Mirrors `third_party/One-to-All-Animation/requirements.txt` (heavy ML deps).
# Torch / flash-attn are intentionally not pinned here; follow upstream README.
one_to_all_animation = [
  "diffusers>=0.36.0",
  "transformers>=4.45.0,<5.0.0",
  "deepspeed>=0.15.4",
  "accelerate>=0.33.0,<1.0.0",
  "onnxruntime-gpu",
  "numpy>=1.26.4,<2.0.0",
  "opencv-python-headless>=4.8.0.76,<5.0.0",
  "imageio>=2.37.0",
  "imageio-ffmpeg>=0.6.0",
  "pillow>=10.3.0",
  "safetensors>=0.5.0",
  "einops",
  "ninja",
  "pandas",
  "decord",
  "tensorboard",
  "pytorch-lightning",
  "ipython",
  "timm",
  "pandarallel",
  "beautifulsoup4",
  "ftfy",
  "matplotlib",
]

[build-system]
requires = ["setuptools>=70.0.0", "wheel>=0.43.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "celery_app", "tasks"]
